[package]
name = "comprehend"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python like list, set and hashmap comprehensions via macros."
repository = "https://github.com/Reun85/comprehend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
